--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
   </div>
 
   <script src="js/data.js"></script>
+  <script src="js/Todo.js"></script>
+  <script src="js/TodoArray.js"></script>
+  <script src="js/TodoForm.js"></script>
   <script src="js/main.js"></script>
+
 </body>
 </html>
