Изменёна логика редактирования задачи.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1 class="page__heading">Todo List</h1>
 
         <div class="todo">
-          <form action="/" method="post" class="todo__form">
+          <form action="/" method="post" class="todo__form" name="new">
             <input class="todo__input input" type="text" required placeholder="Разобраться в замыканиях">
             <button class="todo__button button" type="submit">Сохранить</button>
           </form>
