Add names to form and input

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <h1 class="page__heading">Todo List</h1>
 
         <div class="todo">
-          <form action="/" method="post" class="todo__form">
-            <input class="todo__input input" type="text" required placeholder="Разобраться в замыканиях">
+          <form action="/" method="post" class="todo__form" name="todoForm">
+            <input class="todo__input input" type="text" required placeholder="Разобраться в замыканиях" name="todoForm__input">
             <button class="todo__button button" type="submit">Сохранить</button>
           </form>
 
