Improved the edit button v1

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="todo">
           <form action="/" method="post" class="todo__form">
             <input class="todo__input input" type="text" required placeholder="Разобраться в замыканиях">
-            <button class="todo__button button" type="submit">Сохранить</button>
+            <button class="todo__button button" type="submit">Добавить</button>
           </form>
 
           <ul class="todo__list">
