--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <div class="todo">
           <form action="/" method="post" class="todo__form">
-            <input class="todo__input input" type="text" required placeholder="Разобраться в замыканиях">
+            <input class="todo__input input" type="text" required placeholder="Что надо сделать?">
             <button class="todo__button button" type="submit">Добавить</button>
           </form>
 
