--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
 
       <div class="page__footer">
-        <p>© Yandex.Praktikum 2020</p>
+        <p class="p">© Yandex.Praktikum 2020</p>
       </div>
     </div>
   </div>
